--- a/Consulta/Frontend/style.css
+++ b/Consulta/Frontend/style.css
@@ -13,14 +13,14 @@ body {
   color: black;
   background-color: #ffffff;
   padding: 2px;
-  margin: 10px 0;
-  margin-left: 31.5vw;
+  margin: 10px auto;
   border-radius: 8px;
   display: block;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  width: 40%;
+  width: 80%;
 }
+
 #faixa {
   background-color: rgb(44, 150, 44);
   padding: 4vh;
@@ -28,39 +28,61 @@ body {
 
 .conteudo {
   display: block;
-  margin-left: 38.5vw;
+  margin: 20px auto;
+  width: 80%;
 }
 
 #texto {
-  border-style: outset;
-  border-color: #fff;
-  color: black;
-  background-color: #ffffff;
-  padding: 2px;
-  margin: 10px 0;
-  border-radius: 8px;
+  margin: 10px auto;
   display: block;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  width: 40%;
+  width: 80%;
+}
+
+form {
+  display: block;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #d3d3d3;
+}
+form button {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #d3d3d3;
+  padding: 10px;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+form button:hover {
+  transform: scale(1.1);
+  background-color: rgb(34, 120, 34);
+  color: white;
 }
 
 #codspan {
-  margin-left: 8.5vw;
+  display: block;
+  margin: 10px auto;
+  text-align: center;
 }
 
 #cod {
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   border: 1px solid black;
   color: black;
+  width: 50%;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 #cod:focus {
   background-color: rgb(44, 150, 44);
-}
-
-#Voltar {
-  margin-top: 10px;
-  margin-left: 10.5vw;
+  outline: none;
+  box-shadow: 0 0 8px rgba(44, 150, 44, 0.8);
+  color: #fff;
 }
 
 input::-webkit-outer-spin-button,
@@ -71,4 +93,52 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+@media (max-width: 1024px) {
+  #titulo,
+  #texto {
+    width: 70%;
+  }
+
+  .conteudo {
+    width: 70%;
+  }
+
+  #cod {
+    width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #titulo,
+  #texto {
+    width: 80%;
+    font-size: 18px;
+  }
+
+  .conteudo {
+    width: 80%;
+  }
+
+  #cod {
+    width: 70%;
+  }
+}
+
+@media (max-width: 480px) {
+  #titulo,
+  #texto {
+    width: 90%;
+    font-size: 16px;
+  }
+
+  .conteudo {
+    width: 90%;
+  }
+
+  #cod {
+    width: 90%;
+    font-size: 14px;
+  }
 }
